Internationalization complete! Fairly straightforward, each package gets its own "accessor" class to reference any strings it may want to. The language files are stored in the "languages" folder as properties files. These files' names are the corresponding package with all periods replaced with underscores.
For the xmlgui, each *.xml file now can have an optional *.properties file to go with it. This properties file has the same format as the other language files, specifying a key with some text (eg: exit=Exit CCT). From within a *.xml file, you can reference these key by typing %%exit%%. DynamicString.java will handle these %% delineated strings.

The scramble plugins are not internationalized yet.